k8s/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-app
  name: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    spec:
      containers:
        - name: node-swagger-metrics # name must be under the container
          image: mzm1/node-swagger-metrics:47611a47
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 512
              memory: 512Mi
