k8s/overlays/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-app
  name: node-app
spec:
  ports:
  - name: node-app
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: node-app
  type: ClusterIP
