k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress-app
spec:
  ingressClassName: nginx
  rules:
  - host: node.local.staging
    http:
      paths:
      - backend:
          service:
            name: node-app
            port:
              number: 4000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
